test: car reflection test