@@ -2,8 +2,6 @@ package persistence.study;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
@@ -11,144 +9,145 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-public class ReflectionTest {
+class ReflectionTest {
 
-    private static final Logger logger = LoggerFactory.getLogger(ReflectionTest.class);
-
-    private Class<Car> carClass = Car.class;;
+    private final Class<Car> carClass = Car.class;
 
     @Test
-    @DisplayName("Car 클래스의 필드이름을 가져온다.")
-    void showClass() {
-        logger.debug(carClass.getName());
+    @DisplayName("Car 클래스의 필드명을 조회한다.")
+    void getCarFields() {
+        // given
+        Field[] fields = carClass.getDeclaredFields();
 
-        // 필드
-        List<String> result = Arrays.stream(carClass.getDeclaredFields())
+        // when
+        List<String> result = Arrays.stream(fields)
                 .map(Field::getName)
                 .collect(Collectors.toList());
 
+        // then
         assertThat(result).containsExactlyInAnyOrder("name", "price");
     }
 
     @Test
-    @DisplayName("Car class 생성자 정보를 반환한다.")
-    void showConstructor() {
-        List<Integer> result = Arrays.stream(carClass.getDeclaredConstructors())
+    @DisplayName("Car 클래스의 생성자 파라미터 개수를 조회한다.")
+    void getCarConstructorParameters() {
+        // given
+        Constructor<?>[] constructors = carClass.getDeclaredConstructors();
+
+        // when
+        List<Integer> result = Arrays.stream(constructors)
                 .map(Constructor::getParameterCount)
                 .collect(Collectors.toList());
 
+        // then
         assertThat(result).containsExactlyInAnyOrder(0, 2);
     }
 
     @Test
-    @DisplayName("Car class 메소드 정보를 반환한다.")
-    void showMethod() {
-        List<String> result = Arrays.stream(carClass.getDeclaredMethods())
-                .map(Method::getName)
-                .toList();
+    @DisplayName("Car 클래스의 메소드 이름을 조회한다.")
+    void getCarMethods() {
+        // given
+        Method[] methods = carClass.getDeclaredMethods();
 
-        assertThat(result).containsExactlyInAnyOrder("printView", "testGetPrice", "testGetName");
+        // when
+        List<String> result = Arrays.stream(methods)
+                .map(Method::getName)
+                .collect(Collectors.toList());
+
+        // then
+        assertThat(result).containsExactlyInAnyOrder("printView", "testGetPrice", "testGetName", "equals", "hashCode");
     }
 
     @Test
-    void runMethod() {
-        List<Object> result = Arrays.stream(carClass.getDeclaredMethods())
+    @DisplayName("Car 클래스의 test 로 시작하는 메서드를 실행한다.")
+    void runTestMethod() {
+        // given
+        List<Method> startWithTestMethods = Arrays.stream(carClass.getDeclaredMethods())
                 .filter(method -> method.getName().startsWith("test"))
-                .map(method -> {
-                    try {
-                        return method.invoke(createNewInstance());
-                    } catch (IllegalAccessException | InvocationTargetException e) {
-                        throw new RuntimeException(e);
-                    }
-                })
-                .toList();
+                .collect(Collectors.toList());
 
-        assertThat(result).containsExactlyInAnyOrder("test : 123", "test : nextstep");
+        // when
+        List<Object> result = startWithTestMethods.stream()
+                .map(this::invokeMethod)
+                .collect(Collectors.toList());
+
+        // then
+        assertThat(result).containsExactlyInAnyOrder("test : name", "test : 10");
     }
 
-    private Object createNewInstance() {
-        Class<Car> carClass = Car.class;
-        try {
-            return carClass.getDeclaredConstructor(String.class, int.class).newInstance("nextstep", 123);
-        } catch (IllegalAccessException e) {
-            throw new RuntimeException(e);
-        } catch (InvocationTargetException e) {
-            throw new RuntimeException(e);
-        } catch (InstantiationException e) {
-            throw new RuntimeException(e);
-        } catch (NoSuchMethodException e) {
-            throw new RuntimeException(e);
+    @Test
+    @DisplayName("Car 클래스의 PrintView 어노테이션이 붙은 메서드를 실행한다.")
+    void runAnnotationMethodRun() {
+        // given
+        List<Method> printViewAnnotationMethod = Arrays.stream(carClass.getDeclaredMethods())
+                .filter(method -> method.isAnnotationPresent(PrintView.class))
+                .collect(Collectors.toList());
+
+        // when & then
+        for (Method method : printViewAnnotationMethod) {
+            invokeMethod(method);
         }
     }
 
     @Test
-    void runPrintView() {
-        Arrays.stream(carClass.getDeclaredMethods())
-                .filter(method -> method.isAnnotationPresent(PrintView.class))
-                .forEach(method -> {
-                    logger.debug("메소드 이름 : {}", method.getName());
-                    try {
-                        method.invoke(createNewInstance());
-                    } catch (IllegalAccessException | InvocationTargetException e) {
-                        throw new RuntimeException(e);
-                    }
-                });
-    }
-
-    @Test
     @DisplayName("Car 클래스에 필드에 값을 할당한다.")
-    void seField() {
-        Object carInstance = createNewInstance();
+    void privateFieldAccess() {
+        // given
+        Object car = createNewInstance("", 0);
 
-        Arrays.stream(carInstance.getClass().getDeclaredFields())
-                .forEach(field -> {
-                    field.setAccessible(true);
+        String newName = "name";
+        int newPrice = 10;
 
-                    final Object value = field.getType() == String.class ? "123" : 123;
+        // then
+        for (Field field : car.getClass().getDeclaredFields()) {
+            field.setAccessible(true);
 
-                    try {
-                        field.set(carInstance, value);
-                    } catch (IllegalAccessException e) {
-                        throw new RuntimeException(e);
-                    }
-                });
+            final Object value = field.getType() == String.class ? newName : newPrice;
+            try {
+                field.set(car, value);
+            } catch (IllegalAccessException e) {
+                throw new RuntimeException(e);
+            }
+        }
 
-        List<Object> result = Arrays.stream(carInstance.getClass().getDeclaredMethods())
-                .filter(method -> method.getName().startsWith("test"))
-                .map(method -> {
-                    try {
-                        return method.invoke(carInstance);
-                    } catch (IllegalAccessException | InvocationTargetException e) {
-                        throw new RuntimeException(e);
-                    }
-                })
-                .toList();
-
-        assertThat(result).containsExactlyInAnyOrder("test : 123", "test : 123");
+        // then
+        assertThat(car).isEqualTo(new Car(newName, newPrice));
     }
 
     @Test
     @DisplayName("Car 클래스에서 인자를 가진 인스턴스를 생성한다.")
     void createConstructWithParameter() {
-        Object carInstance = createNewInstance();
+        // given
+        String name = "name";
+        int price = 10;
 
-        List<Object> result = Arrays.stream(carInstance.getClass().getDeclaredMethods())
-                .filter(method -> method.getName().startsWith("test"))
-                .map(method -> {
-                    try {
-                        return method.invoke(createNewInstance());
-                    } catch (IllegalAccessException | InvocationTargetException e) {
-                        throw new RuntimeException(e);
-                    }
-                })
-                .toList();
+        // when
+        Object car = createNewInstance(name, price);
 
-        assertThat(result).containsExactlyInAnyOrder("test : 123", "test : nextstep");
+        // then
+        assertThat(car).isEqualTo(new Car(name, price));
     }
 
+
+    private Object createNewInstance(String name, int price) {
+        Class<Car> carClass = Car.class;
+        try {
+            return carClass.getDeclaredConstructor(String.class, int.class).newInstance(name, price);
+        } catch (IllegalAccessException | InvocationTargetException |
+                 InstantiationException | NoSuchMethodException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private Object invokeMethod(Method method) {
+        try {
+            return method.invoke(createNewInstance("name", 10));
+        } catch (IllegalAccessException | InvocationTargetException e) {
+            throw new RuntimeException(e);
+        }
+    }
 }
